--- a/Contact info.html
+++ b/Contact info.html
@@ -9,8 +9,10 @@
 <p>My fictional address </p>
 <p>+31689756846</p>
 <p>myemail@gmail.com</p>
+    <hr noshade>
 <form class="" action="mailto:vanitybletterman@gmail.com" method="post" enctype="text/plain">
-  <label for="">Your name:</label>
+  <input type="Date" name="The date"><br>
+  <label>Your name:</label>
   <input type="text" name="Your name" value=""><br>
   <label>Your email:</label>
   <input type="email" name="Your email" value=""><br>
