--- a/Contact info.html
+++ b/Contact info.html
@@ -11,7 +11,7 @@
 <p>myemail@gmail.com</p>
 <hr noshade />
 <form class="" action="mailto:vanitybletterman@gmail.com" method="post" enctype="text/plain">
-  <input type="Date" name="Date" value="">
+  <input type="Date" name="Date" value=""><br>
 <label>Your name:</label>
   <input type="text" name="Your name" value=""><br>
   <label>Your email:</label>
